fixed launch script issue